# dolphin-id-labzoo

./: .gitignore  README.md  TODO.md  openapi_check.json  pyproject.toml  run.py
app/: __init__.py  config.py  database.py  main.py
app/models/: __init__.py  individual.py  result.py  session.py
app/routers/: __init__.py  browse.py  export.py  gallery.py  results.py  sessions.py
app/services/: __init__.py  detection.py  gallery.py  identification.py  pipeline.py
app/static/: index.html
app/static/css/: styles.css
app/static/js/: app.js  gallery.js  processing.js  results.js  upload.js
docs/: AGENTS.md  ARCHITECTURE.md  SETUP_LAB.md
ml/: __init__.py  arcface.py  module.py
scripts/: setup_artifacts.py
tests/: conftest.py
tests/integration/: test_api_basic.py
tests/unit/: test_config.py
